tests/error/ptr_defined.gw
int i;
typedef void (i)(){}
